[package]
name = "dsp_tools"
description = "Various useful tools for DSP"
license = "MIT"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
byteorder = "1.5.0"
clap = { version = "4.6.0", features = ["derive"] }
num-complex = "0.4.6"
rand = "0.10.0"
rand_distr = "0.6.0"
thiserror = "2.0.18"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
